Replace cassowary peak label placement with purpose made layout code. Still room for peak label placement improvement, but a lot better than before. Removed c.min.js (cassowary JS).

--- a/d3_resources/example_json_input.html
+++ b/d3_resources/example_json_input.html
@@ -5,16 +5,8 @@
     <title>Interactive Spectrum Development</title>
     <script src='d3.v3.min.js'></script>
     <script type="text/javascript" src="SpectrumChartD3.js"></script>
-    
-    <!-- cassowary JS library for the placement of peak labels - if you know you 
-        wont have any (because input files dont contain peaks), you can leave 
-        this out 
-    -->
-    <!--
-    <script src='c.min.js'></script>
-    -->
-    
     <link rel="stylesheet" type="text/css" href="SpectrumChartD3.css">
+    <link rel="stylesheet" type="text/css" href="SpectrumChartD3StandAlone.css">
 
     <script>
       //some boilerplate to load the JSON file
