--- a/d3_resources/index.html
+++ b/d3_resources/index.html
@@ -9,156 +9,14 @@
     <!-- <script src='numeric-1.2.6.min.js'></script> -->
     <!-- <script type="text/javascript" src="PeakFit.js"></script>   -->
 
-    <script src='c.min.js'></script>
     <script type="text/javascript" src="SpectrumChartD3.js"></script>
+    <link rel="stylesheet" type="text/css" href="SpectrumChartD3.css">
+    <link rel="stylesheet" type="text/css" href="SpectrumChartD3StandAlone.css">
     <style type="text/css">
       body { font: 13px sans-serif; }
       rect { fill: #fff; }
-      label{ margin-left: 5px; }
-
-      .yaxis, .yaxislabel { font-size: 1em; }
-      .xaxis { font-size: 1em; font-weight: normal; }
-
-      .xaxis > .tick > line, .yaxis > .tick, .yaxistick { stroke: black; stroke-width: 1px; }
-      .xgrid > .tick, .ygrid > .tick{ stroke: #b3b3b3; stroke-opacity: 80%; }
-      .minorgrid { stroke: #e6e6e6; stroke-opacity: 50%; }
-
-      .xaxistitle{}
-      .yaxistitle{}
-
-      .touchLine{  stroke-width: 2; stroke: gray; stroke-dasharray: 3;  }
-
-      .mouseLine      { font-size: 0.8em; stroke-width: 2;  stroke: black }
-      .secondaryMouseLine { font-size: 0.8em; stroke-width: 1;  stroke: black }
-      .lightMouseLine { font-size: 0.8em; stroke-width: 0.5;  stroke: gray }
-
-      .peakLine{ font-size: 0.8em; stroke-width: 2; stroke: black;  }
-      .escapeLineForward { font-size: 0.8em; stroke-width: 2; stroke-dasharray: 2; stroke: black;  }
-
-      .createPeakMouseLine { fill: none; stroke: black;  stroke-width: 1.5px; }
-      .createPeakArrowLine { fill: none; stroke: black;  stroke-width: 1px; }
-      .createPeakContEstLine { fill: none; stroke: grey; stroke-width: 2px;  }
-      .createPeakLeftTouchPoint { fill: blue; }
-      .createPeakRightTouchPoint { fill: black; }
-      .createPeakTouchLine { stroke-width: 2; stroke: grey; stroke-dasharray: 4; }
-
-      .chartLineText {  font-size: 0.8em; font-family: Helvetica, Arial;  font-weight: bold }
-      .mouseLineText  {  font-size: 0.8em; font-family: Helvetica, Arial;  font-weight: bold }
-      .deletePeaksText  {  font-size: 0.8em; font-family: Helvetica, Arial;  font-weight: bold }
-      .countGammasText  {  font-size: 0.8em; font-family: Helvetica, Arial;  font-weight: bold }
-      .peakText{ font-size: 0.8em; font-family: Helvetica, Arial;  font-weight: bold }
-      .contEstLineText {  font-size: 0.8em; font-family: Helvetica, Arial;  stroke:grey;  }
-      .createPeakTouchText {  font-size: 0.8em; font-family: Helvetica, Arial;  stroke:grey; fill: grey; }
-
-      .refLineInfo{ font-size: 0.8em; }
-      .mouseInfo{ font-size: 0.85em;  }
-      .mouseInfoBox{ fill: white; fill-opacity: 0.85; }
-
-      .peakInfo{ font-size: 0.85em; }
-      .peakInfoBox{
-        fill: #ffffcc;
-        fill-opacity: 1;
-        stroke: #444422;
-      }
-      .peakInfoLabel {
-        font-weight: bold;
-      }
-
-      
-      .legend{ font-size: 1em; }
-      .legentry{}
-      .legendBack{ fill: rgba(245,245,245,0.5); stroke: rgba(185,185,185,0.80); }
-      .activeLegend > .legendBack{ fill-opacity: 0.85; }
-      .legendHeader{ fill: rgba(185,185,185,0.80); fill-opacity: 0.55; }
-      .activeLegend > g > .legendHeader{ fill: #909090; fill-opacity: 0.95; }
-      .d3closebut{ fill: #909090; }
-      /* .d3closebut:hover{ fill: #4d4d4d; } */
-
-      .scalerwidget{ font-size: 1em; }
-      .scalerEntry{}
-      .scalerback{ fill: rgba(245,245,245,0.5); stroke: rgba(185,185,185,0.80); }
-      .activescaler > .scalerback{ fill-opacity: 0.85; }
-      .scalerheader{ fill: rgba(185,185,185,0.80); fill-opacity: 0.55; }
-      .activescaler > g > .scalerheader{ fill: #909090; fill-opacity: 0.95; }
-      .scaleraxis{ fill: lightgrey; stroke: grey; }
-      .scalertoggle{ fill: lightgrey; stroke: grey; }
-
-      .peaklabelarrow {
-        stroke-width: 1.5;
-        stroke: black;
-        z-index: 100;
-      }
-      
-      .leftbuttonzoombox {
-        fill: #666;
-        fill-opacity: 0.25;
-      }
-
-      .leftbuttonzoomoutboxy {
-        fill: #666;
-        fill-opacity: 0.1;
-      }
-
-      .deletePeaksBox {
-        fill: #666;
-        fill-opacity: 0.5;
-      }
-
-      .countGammasBoxForward {
-        fill: rgba(255,255,0,0.605);
-        fill-opacity: 1;
-      }
-
-      .sliderBox {
-        fill: #666;
-        fill-opacity: 0.7;
-        stroke: black;
-        stroke-width: 0.2%;
-      }
-      .sliderDragRegion {
-        fill: rgba(185,185,185,0.80);
-        fill-opacity: 1;
-        stroke: #666;
-        stroke-width: 0.1%;
-      }
-      .sliderDragRegionLine {
-        fill: #444;
-        stroke: #444;
-        stroke-width: 0.08%;
-      }
-
-      .leftbuttonzoomoutbox {
-        fill: none;
-      }
-
-      .line {
-        fill: none;
-        stroke-width: 1px;
-      }
-
-      .sline {
-        fill: none;
-        stroke-width: 0.7px;
-      }
-
-      .rline {
-        fill: none;
-        stroke-width: 0.5px;
-      }
-
-      .focus circle {
-        fill: none;
-        stroke: steelblue;
-      }
-      .title { font-size: 1.5em; }
-      .chart {
-        background-color: #F7F2C5;
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-        height: 500px; }
-
     </style>
+
   </head>
   <body>
     <div id="chart1" class="chart" oncontextmenu="return false;"></div>
