--- a/d3_resources/colordev.html
+++ b/d3_resources/colordev.html
@@ -10,7 +10,7 @@
     <!-- <script src='numeric-1.2.6.min.js'></script> -->
     <!-- <script type="text/javascript" src="PeakFit.js"></script>   -->
 
-    <script src='c.min.js'></script>
+    <!-- <script src='c.min.js'></script> -->
     <script type="text/javascript" src="SpectrumChartD3.js"></script>
     <link rel="stylesheet" href="SpectrumChartD3.css">    
 
@@ -22,7 +22,7 @@
 
     <script type="text/javascript">
 
-    browserPolyfill();
+    //browserPolyfill();
 
     // Old format
     var gr135Mo99WithPeaksAndBackground = {
