--- a/d3_resources/example_json_input.html
+++ b/d3_resources/example_json_input.html
@@ -13,6 +13,19 @@
     <script>
       //some boilerplate to load the JSON file
       function loadJSON(callback){
+
+        // Some browsers (at least FF) will let you load 'example_json_input.json' from disk, so we'll try this.
+        var xobj = new XMLHttpRequest();
+        xobj.overrideMimeType("application/json");
+        xobj.open( 'GET', 'example_json_input.json', true);
+        xobj.onreadystatechange = function(){
+          if(xobj.readyState==4 /*&& xobj.status=="200"*/ ){
+            callback(xobj.responseText);
+          }
+        };
+        xobj.send(null);
+
+        // For other browsers, the user must have the user initiate things.
         const fileSelector = document.getElementById('file-selector');
         fileSelector.addEventListener('change', (event) => {
           const fileList = event.target.files;
@@ -65,15 +78,26 @@
           graph.setData( chart_data );
           graph.setLogY();
 
-          window.addEventListener('resize', function(){ graph.handleResize(); } );
+          const handleResize = function(){
+            const chart = document.getElementById('chart1');
+            chart.style.width = (0.9*window.innerWidth) + "px";
+            chart.style.height = Math.min( 0.4*window.innerWidth, 0.75*window.innerHeight ) + "px";
+
+            graph.handleResize(); 
+          };
+
+          window.addEventListener('resize', handleResize );
+          
+          handleResize();
         });
+        
       }
 
   </script>
 
   </head>
   <body onload="init()">
-    <div id="chart1" class="chart" oncontextmenu="return false;";></div>
+    <div id="chart1" class="chart" oncontextmenu="return false;" style="margin-left: auto; margin-right: auto; min-height: 150px;"></div>
 
     <!-- Everything bellow here are optional controls you can offer for displaying the spectra: -->
     <script>
